--- a/src/styles/game.scss
+++ b/src/styles/game.scss
@@ -501,3 +501,10 @@ $dealCardColYPositions: 145px, -16px;
 .dim {
     opacity: .5;
 }
+
+.pot {
+    padding-top: $dealOriginY;
+    position: absolute;
+    width: 100%;
+    font-weight:bold;
+}
