--- a/src/styles/game.scss
+++ b/src/styles/game.scss
@@ -1,6 +1,6 @@
 $userCardWidth: 40px;
 $userCardHeight: 53px;
-$flippedHandVerticalOffset: -($userCardHeight) - 5px;
+$flippedHandVerticalOffset: -($userCardHeight);
 $flippedHandHorizontalOffset: -($userCardWidth * 2) - 5px;
 
 $tableWidth: 900px;
@@ -54,14 +54,11 @@ $currentBetOffset: -($currentBetWidth - 15px);
     }
 }
 
-.card-back, .card-front {
+.card-back {
     height: $playerCardHeight;
     width: $playerCardWidth;
     background-size: contain;
     display: inline-block;
-}
-
-.card-back {
     background-image: url("/images/card-back.png");
 }
 
@@ -182,7 +179,7 @@ $currentBetOffset: -($currentBetWidth - 15px);
         left: 20%;
 
         &.flipped-hand {
-            top: $flippedHandVerticalOffset;
+            top: -60px;
             left: -3px;
         }
     }
@@ -209,7 +206,7 @@ $currentBetOffset: -($currentBetWidth - 15px);
         bottom: $playerHandVerticalOffset;
 
         &.flipped-hand {
-            bottom: $flippedHandVerticalOffset;
+            bottom: -38px;
             left: -3px;
         }
     }
@@ -296,7 +293,7 @@ $colDealerChipVerticalOffset: 60px;
     .hand {
         top: $colHandOffset;
         &.flipped-hand {
-            top: 0;
+            top: -42px;
         }
     }
 
@@ -317,7 +314,7 @@ $colDealerChipVerticalOffset: 60px;
     .hand {
         bottom: $colHandOffset;
         &.flipped-hand {
-            bottom: 0;
+            bottom: -20px;
         }
     }
 
@@ -358,7 +355,7 @@ $colDealerChipVerticalOffset: 60px;
     .hand {
         bottom: $colHandOffset;
         &.flipped-hand {
-            bottom: 0;
+            bottom: -20px;
         }
     }
 
@@ -379,7 +376,7 @@ $colDealerChipVerticalOffset: 60px;
     .hand {
         top: $colHandOffset;
         &.flipped-hand {
-            top: 0;
+            top: -42px;
         }
     }
 
@@ -519,10 +516,10 @@ $dealCardColYPositions: 145px, -16px;
 /* Animate winners */
 
 // Positions in relation to the origin
-$winnerXPositions: 235px, 66px, -102px, -270px;
-$winnerYPositions: 175px, -41px;
-$winnerColXPositions: 315px, -345px;
-$winnerColYPositions: 120px, 13px;
+$winnerXPositions: 251px, 80px, -86px, -254px;
+$winnerYPositions: 152px, -14px;
+$winnerColXPositions: 309px, -311px;
+$winnerColYPositions: 77px, 60px;
 
 @for $i from 0 to 12 {
     .winner-animation-#{$i} {
@@ -575,7 +572,17 @@ $winnerColYPositions: 120px, 13px;
 
 .winner-pot {
     top: $dealOriginY;
-    left: $dealOriginX;
+    left: $dealOriginX  - 38px;
     position: absolute;
     font-weight:bold;
+    width: 86px;
+    text-align: center;
+}
+
+.winning-hand-type {
+    font-weight: bold;
+    width: 100%;
+    text-align: center;
+    top: 332px;
+    position: absolute;
 }
